updated Portuguese translation

--- a/po/wesnoth-test/pt.po
+++ b/po/wesnoth-test/pt.po
@@ -6,9 +6,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.5+svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2010-05-24 17:53+0200\n"
-"PO-Revision-Date: 2005-11-03 17:20GMT Standard Time\n"
-"Last-Translator: Luis Passos Carvalho (lpassos AT gmail DOT com)\n"
+"POT-Creation-Date: 2012-10-27 15:56+0200\n"
+"PO-Revision-Date: 2012-12-04 17:37+0100\n"
+"Last-Translator: trewe <sjr456@yahoo.fr>\n"
 "Language-Team: European Portuguese\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -19,4 +19,4 @@ msgstr ""
 #. [test_key2]
 #: data/test/test/_main.cfg:24
 msgid "testing translation reset."
-msgstr ""
+msgstr "Testar reinicio de tradução."
