--- a/po/wesnoth-lib/gl.po
+++ b/po/wesnoth-lib/gl.po
@@ -14,10 +14,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-12-07 20:59+0100\n"
-"PO-Revision-Date: 2012-10-27 18:46+0200\n"
-"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
-"Language-Team: Galician <proxecto@trasno.net>\n"
+"POT-Creation-Date: 2012-12-08 12:33+0100\n"
+"PO-Revision-Date: 2012-12-26 17:15+0100\n"
+"Last-Translator: Adrian Chaves Fernandez <adriyetichaves@gmail.com>\n"
+"Language-Team: Galician <proxecto@trasno.org>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -347,10 +347,8 @@ msgstr "Selva tropical"
 
 #. [terrain_type]: id=rainforest
 #: data/core/terrain.cfg:497
-#, fuzzy
-#| msgid "Pine Forest"
 msgid "Rainforest"
-msgstr "Bosque de piñeiros"
+msgstr "Selva"
 
 #. [terrain_type]: id=palm_desert_forest
 #: data/core/terrain.cfg:509
@@ -359,10 +357,8 @@ msgstr "Bosque de palmeiras"
 
 #. [terrain_type]: id=palm_forest
 #: data/core/terrain.cfg:521
-#, fuzzy
-#| msgid "Palm Forest"
 msgid "Dense Palm Forest"
-msgstr "Bosque de palmeiras"
+msgstr "Bosque de palmeiras denso"
 
 #. [terrain_type]: id=savanna_forest
 #: data/core/terrain.cfg:533
@@ -552,17 +548,13 @@ msgstr "Bosque de palmeiras elevado"
 
 #. [terrain_type]: id=forest_palm_hills
 #: data/core/terrain.cfg:878
-#, fuzzy
-#| msgid "Palm Forested Hills"
 msgid "Dense Palm Forested Hills"
-msgstr "Bosque de palmeiras elevado"
+msgstr "Bosque de palmeiras denso elevado"
 
 #. [terrain_type]: id=savanna_hills
 #: data/core/terrain.cfg:889
-#, fuzzy
-#| msgid "Palm Forested Hills"
 msgid "Savanna Forested Hills"
-msgstr "Bosque de palmeiras elevado"
+msgstr "Sabana elevada"
 
 #. [terrain_type]
 #: data/core/terrain.cfg:901
@@ -4366,10 +4358,8 @@ msgid "Roads between castles"
 msgstr "Camiños entre os castelos"
 
 #: src/mapgen_dialog.cpp:257
-#, fuzzy
-#| msgid "Show floating labels"
 msgid "Show labels"
-msgstr "Amosar etiquetas flotantes."
+msgstr "Amosar as etiquetas"
 
 #: src/mapgen_dialog.cpp:315
 msgid "/1000 tiles"
