--- a/po/wesnoth/gl.po
+++ b/po/wesnoth/gl.po
@@ -13,9 +13,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-12-07 20:59+0100\n"
-"PO-Revision-Date: 2012-10-27 19:04+0200\n"
-"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
+"POT-Creation-Date: 2012-12-08 12:33+0100\n"
+"PO-Revision-Date: 2012-12-29 07:37+0100\n"
+"Last-Translator: Adrian Chaves Fernandez <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
@@ -269,17 +269,13 @@ msgstr "Mando: límite do empurre"
 
 #. [ai]: id=ai_default_rca
 #: data/ai/ais/ai_default_rca.cfg:5
-#, fuzzy
-#| msgid "Multiplayer_AI^Default AI"
 msgid "Multiplayer_AI^Default AI (RCA)"
-msgstr "AI por defecto"
+msgstr "IA predeterminada (RCA)"
 
 #. [ai]: id=experimental_ai
 #: data/ai/ais/ai_generic-rush.cfg:7
-#, fuzzy
-#| msgid "Multiplayer_AI^Default AI"
 msgid "Multiplayer_AI^Experimental AI"
-msgstr "AI por defecto"
+msgstr "IA experimental"
 
 #. #-#-#-#-#  wesnoth.wml.pot (PACKAGE VERSION)  #-#-#-#-#
 #. [lua]: set_status
@@ -2408,9 +2404,9 @@ msgid ""
 "<b>Status Table</b> will let you know how your enemies are doing, and how "
 "you are doing in comparison."
 msgstr ""
-"Hai algunhas xanelas de resumo útiles no menú principal. Por exemplo, o "
-"<b>Cadro da situación</b> permitirache saber como lles vai aos  inimigos, e "
-"como che vai a ti en comparación."
+"No menú principal podes acceder a algunhas xanelas informativas que che "
+"serán de utilidade. Por exemplo, o <b>Cadro da situación</b> permitirache "
+"saber como lles vai aos  inimigos, e como che vai a ti en comparación."
 
 #. [tip]
 #: data/hardwired/tips.cfg:28
@@ -4362,10 +4358,8 @@ msgstr "Seguro que queres despedilo?"
 
 #. TRANSLATORS: this string ends with a space
 #: src/menu_events.cpp:104
-#, fuzzy
-#| msgid "This unit is loyal and requires no upkeep."
 msgid "This unit is loyal and requires no upkeep. "
-msgstr "Esta unidade é leal e non precisa mantemento."
+msgstr "Esta unidade é leal e non precisa mantemento. "
 
 #: src/menu_events.cpp:105 src/menu_events.cpp:109 src/menu_events.cpp:114
 msgid "Do you really want to dismiss her?"
@@ -4373,17 +4367,13 @@ msgstr "Seguro que queres despedila?"
 
 #. TRANSLATORS: this string ends with a space
 #: src/menu_events.cpp:108
-#, fuzzy
-#| msgid "This unit is an experienced one, having advanced levels."
 msgid "This unit is an experienced one, having advanced levels. "
-msgstr "Esta é unha unidade veterana, xa avanzou algúns niveis."
+msgstr "Esta é unha unidade veterana, xa avanzou algúns niveis. "
 
 #. TRANSLATORS: this string ends with a space
 #: src/menu_events.cpp:113
-#, fuzzy
-#| msgid "This unit is close to advancing a level."
 msgid "This unit is close to advancing a level. "
-msgstr "Esta unidade está a piques de avanzar un nivel."
+msgstr "Esta unidade está a piques de avanzar un nivel. "
 
 #: src/menu_events.cpp:118 src/menu_events.cpp:1003
 msgid "Dismiss Unit"
