Updated the British English translation.

--- a/po/wesnoth-lib/en_GB.po
+++ b/po/wesnoth-lib/en_GB.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-12-07 20:59+0100\n"
-"PO-Revision-Date: 2012-08-15 07:23-0500\n"
+"POT-Creation-Date: 2012-12-08 12:33+0100\n"
+"PO-Revision-Date: 2012-10-26 21:25-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -1256,7 +1256,7 @@ msgstr "Unwalkable"
 #. [terrain_type]: id=rails
 #: data/core/terrain.cfg:2346
 msgid "Rails"
-msgstr ""
+msgstr "Rails"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
 #. [button]: id=cancel
@@ -1377,7 +1377,7 @@ msgstr "Size:"
 #. [label]
 #: data/gui/default/window/addon_description.cfg:243
 msgid "Downloads:"
-msgstr ""
+msgstr "Downloads:"
 
 #. [label]
 #: data/gui/default/window/addon_description.cfg:274
@@ -1402,7 +1402,7 @@ msgstr "None"
 #. [row]
 #: data/gui/default/window/addon_filter_options.cfg:34
 msgid "addons_of_type^Campaigns"
-msgstr ""
+msgstr "Campaigns"
 
 #. [row]
 #: data/gui/default/window/addon_filter_options.cfg:35
@@ -1427,7 +1427,7 @@ msgstr ""
 #. [row]
 #: data/gui/default/window/addon_filter_options.cfg:43
 msgid "addons_of_type^Resources"
-msgstr ""
+msgstr "Resources"
 
 #. [row]
 #: data/gui/default/window/addon_filter_options.cfg:46
@@ -1437,7 +1437,7 @@ msgstr ""
 #. [row]
 #: data/gui/default/window/addon_filter_options.cfg:48
 msgid "addons_of_type^Other"
-msgstr ""
+msgstr "Other"
 
 #. [row]
 #: data/gui/default/window/addon_filter_options.cfg:51
@@ -1447,12 +1447,14 @@ msgstr ""
 #. [row]
 #: data/gui/default/window/addon_filter_options.cfg:52
 msgid "addons_of_type^Unknown"
-msgstr ""
+msgstr "Unknown"
 
 #. [row]
 #: data/gui/default/window/addon_filter_options.cfg:55
+#, fuzzy
+#| msgid "addons_of_type^Campaigns"
 msgid "addons_of_type^MP modifications"
-msgstr ""
+msgstr "Campaigns"
 
 #. [label]
 #: data/gui/default/window/addon_filter_options.cfg:156
