--- a/po/wesnoth-low/en_GB.po
+++ b/po/wesnoth-low/en_GB.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-12-07 20:59+0100\n"
-"PO-Revision-Date: 2012-09-02 23:12-0500\n"
+"POT-Creation-Date: 2012-12-08 12:33+0100\n"
+"PO-Revision-Date: 2012-12-26 23:09-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -5456,20 +5456,14 @@ msgstr "elates Kalenz"
 msgid "female^elates Kalenz"
 msgstr "elates Kalenz"
 
+# TODO: greatly improve
 #. [leadership]: id=elates_kalenz
 #: data/campaigns/Legend_of_Wesmere/utils/abilities.cfg:13
-#, fuzzy
-#| msgid ""
-#| "elates Kalenz:\n"
-#| "Through the special bond between Kalenz and Cleodil, she elates him to "
-#| "fight better.\n"
-#| "Adjacent to Cleodil, Kalenz will do 25% more damage in battle."
 msgid ""
 "Through the special bond between Kalenz and Cleodil, she elates him to fight "
 "better.\n"
 "Adjacent to Cleodil, Kalenz will do 25% more damage in battle."
 msgstr ""
-"elates Kalenz:\n"
 "Through the special bond between Kalenz and Cleodil, she elates him to fight "
 "better.\n"
 "Adjacent to Cleodil, Kalenz will do 25% more damage in battle."
@@ -5484,23 +5478,17 @@ msgstr "heals Kalenz +4"
 msgid "female^heals Kalenz +4"
 msgstr "heals Kalenz +4"
 
+# TODO: eliminate double space in the original and improve the string in general
 #. [heals]: id=heals_kalenz
 #: data/campaigns/Legend_of_Wesmere/utils/abilities.cfg:36
-#, fuzzy
-#| msgid ""
-#| "heals +4:\n"
-#| "If a shyde has developed a special bond to a person her healing abilities "
-#| "increase for him.  This allows Cleodil to give Kalenz extra points of "
-#| "healing at the beginning of your turn."
 msgid ""
 "If a shyde has developed a special bond to a person her healing abilities "
 "increase for him.  This allows Cleodil to give Kalenz extra points of "
 "healing at the beginning of your turn."
 msgstr ""
-"heals +4:\n"
 "If a shyde has developed a special bond to a person her healing abilities "
-"increase for him.  This allows Cleodil to give Kalenz extra points of "
-"healing at the beginning of your turn."
+"increase for him. This allows Cleodil to give Kalenz extra points of healing "
+"at the beginning of your turn."
 
 #. [message]: speaker=unit
 #: data/campaigns/Legend_of_Wesmere/utils/characters.cfg:153
