--- a/po/wesnoth-multiplayer/en_GB.po
+++ b/po/wesnoth-multiplayer/en_GB.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-18 09:41+0200\n"
-"PO-Revision-Date: 2012-09-02 23:26-0500\n"
+"PO-Revision-Date: 2012-12-26 22:55-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -2019,7 +2019,7 @@ msgid ""
 "requires two teams to coordinate on both offense and defense."
 msgstr ""
 "Inspired from Morituri, this 8 player map creates an epic battle scene that "
-"requires two teams to coordinate on both offense and defense."
+"requires two teams to coordinate on both offence and defence."
 
 #. [multiplayer]: id=multiplayer_8p_Morituri
 #: data/multiplayer/scenarios/8p_Morituri.cfg:5
