--- a/po/wesnoth-l/la.po
+++ b/po/wesnoth-l/la.po
@@ -13,13 +13,14 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-18 09:41+0200\n"
-"PO-Revision-Date: 2012-04-06 01:31+0100\n"
+"PO-Revision-Date: 2012-12-17 00:12-0000\n"
 "Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
 "Language-Team: Latin <http://wiki.wesnoth.org/LatinTranslation>\n"
 "Language: la\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #. [campaign]: id=Liberty
 #. Yes, that is "marchlanders", not "marshlanders".
@@ -1799,7 +1800,7 @@ msgid ""
 "people may have a chance. Rest well tonight, because tomorrow’s battle will "
 "decide the fate of our homes, our families, and our freedom."
 msgstr ""
-"Quam crueta caedes. Nunc ad Halmoenem pugnandum est. Si moremur, illi "
+"Quam cruenta caedes. Nunc ad Halmoenem pugnandum est. Si moremur, illi "
 "invicti fiant. Si totum urere possimus priusquam accidit, fortasse gens "
 "nostra superstabunt. Bene dormite hac nocte, nam ex proelio psotridie pendet "
 "fortuna vitarum nostrum et domuum et libertatis."
@@ -2450,12 +2451,17 @@ msgid ""
 "skilled as mages with more formal training, their magic can be quite lethal, "
 "while their banditry has resulted in moderate skill with the short sword."
 msgstr ""
+"Aliqui magorum ex collegio eiiciuntur quia animos in artibus nefandis "
+"exercere conati sunt. Qui proscripti quodcumque necesse est faciunt ut "
+"studio artis nigrae provideo. Quamvis non tam periti quam magi recte "
+"exerciti, magia illorum mortifera est, et latrocinando quoque periti "
+"pugionis sunt."
 
 #. [attack]: type=blade
 #: data/campaigns/Liberty/units/Rogue_Mage.cfg:24
 #: data/campaigns/Liberty/units/Shadow_Mage.cfg:27
 msgid "short sword"
-msgstr "gladius brevis"
+msgstr "pugio"
 
 #. [attack]: type=cold
 #: data/campaigns/Liberty/units/Rogue_Mage.cfg:33
@@ -2476,6 +2482,10 @@ msgid ""
 "needing physical weapons, they are fearsome to both their enemies and those "
 "they lord over."
 msgstr ""
+"Pauci hominum qui secreta lucis tenebrasque cognoscunt sanitatem tenent. Qui "
+"se librare possunt Dominus Umbrarum fiunt, et nec mundum lucis nec mundum "
+"tenebrarum insunt. Quia tela corporea iam non utilia sunt, et hostes et "
+"inter quos dominatur terret."
 
 #. [attack]: type=blade
 #: data/campaigns/Liberty/units/Shadow_Lord.cfg:29
@@ -2509,11 +2519,16 @@ msgid ""
 "attacks. Despite their offensive power, the corruption in their souls has "
 "begun to adversely affect their health."
 msgstr ""
+"Anni violentiae saevitiaeque studio artium nefandarum magos umbrarum "
+"pugnatores formidulosos fecerunt. Quamvis servi potestatis, aliquando "
+"gregibus satellitum imperant. Magia eminus impares aliis magis, igitur "
+"impetus vastos comminus curant. Quamquam potentes sint, corruptio animi "
+"salutem adficere coepit. "
 
 #. [unit_type]: id=Skeleton Rider, race=undead
 #: data/campaigns/Liberty/units/Skeleton_Rider.cfg:5
 msgid "Skeleton Rider"
-msgstr "Ossa Equestra"
+msgstr "Eques Osseus"
 
 #. [unit_type]: id=Skeleton Rider, race=undead
 #: data/campaigns/Liberty/units/Skeleton_Rider.cfg:35
@@ -2522,6 +2537,8 @@ msgid ""
 "their skeletal horses were raised from the grave by unholy magic to spread "
 "fear and destruction."
 msgstr ""
+"Hi equites, qui olim per campos tonabant, equos ossea sedentes a terra magia "
+"nefanda metum exitiumque effusum sparsa arcessiti sunt."
 
 #. [unit_type]: id=Thug_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:20
@@ -2534,11 +2551,12 @@ msgid ""
 "Peasants live in the small hamlets and villages scattered across the Wesnoth "
 "countryside."
 msgstr ""
+"Rustici viculos et vicos parvos per rurem Vesnotiensem sparsos habitant."
 
 #. [unit_type]: id=Bandit_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:36
 msgid "Village Elder"
-msgstr "Pater Vici"
+msgstr "Senior Vici"
 
 #. [unit_type]: id=Bandit_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:39
@@ -2547,6 +2565,8 @@ msgid ""
 "guided by a group of elders, who are the village’s wisest and most "
 "experienced residents."
 msgstr ""
+"Quisque vicus per rurem Vesnotiensem sparsus saepe ab senioribus regitur, "
+"qui incolae sapientissimi expertissimique vici sunt. "
 
 #. [unit_type]: id=Highwayman_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:52
@@ -2561,6 +2581,9 @@ msgid ""
 "their shoulders. Provincial officials tend to choose senior village elders "
 "as magistrates so that legal and customary authority will coincide."
 msgstr ""
+"Totus vicus ex principe moderationi pendet. Principes, validi et sapientes, "
+"salutati populi praesunt. Ministri provinciae principes ut magistros eligere "
+"solent ut auctoritas morum et legis conveniat."
 
 #. [female]
 #: data/campaigns/Liberty/units/Villagers.cfg:58
@@ -2578,6 +2601,8 @@ msgid ""
 "The scruffy-haired peasant youth are much like the young people living "
 "elsewhere in Wesnoth: reckless, cocky, and eager to explore."
 msgstr ""
+"Iuventus rustica et impexa verisimilis iuventuti urbanae sunt: audax, ferox, "
+"cupida explorandi."
 
 #. [female]
 #: data/campaigns/Liberty/units/Villagers.cfg:129
@@ -2595,6 +2620,8 @@ msgid ""
 "The watchmen are men and women who protect the villages from marauders, both "
 "human and otherwise, that prowl the Wesnoth countryside at night."
 msgstr ""
+"Vigiles homines mulieresque sunt, qui a praedonibus et humanis et alienis, "
+"qui noctu rurem Vesnotiensem surrepunt, vicos defendunt."
 
 #. [female]
 #: data/campaigns/Liberty/units/Villagers.cfg:150
@@ -2614,6 +2641,9 @@ msgid ""
 "native toughness and knowledge of local conditions make them formidable on "
 "their home ground."
 msgstr ""
+"Vici oppidani milites proprios tenent ut hostes depellant. Etsi qui non ut "
+"milites regii periti armative sunt, duritia indigena et scientia rerum "
+"localium se formidabiles domi facit."
 
 #. [female]
 #: data/campaigns/Liberty/units/Villagers.cfg:171
@@ -2632,6 +2662,8 @@ msgid ""
 "bring in much of their food supply. Their stealth and intimate knowledge of "
 "local terrain can be valuable assets in combat."
 msgstr ""
+"Vici, praesertim qui pro finibus insint, ex venatoribus multo cibo pendent. "
+"Illorum astutia et terrae localis scientia in certamine multum potest."
 
 #. [unit_type]: id=Trapper_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:206
@@ -2645,6 +2677,8 @@ msgid ""
 "Their hunting experience makes them most valuable at night and in forests "
 "and swamps."
 msgstr ""
+"Captores venatores periti sunt qui cibo et pellibus pro multis vicis "
+"provideant. Ob usum venatoriam noctu et in silva paludineque utilissimi sunt."
 
 #. [unit_type]: id=Huntsman_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:223
@@ -2658,6 +2692,8 @@ msgid ""
 "wilderness homes. They can bullseye ferocious swamp rats and track anything "
 "that moves in their territory."
 msgstr ""
+"Venatores vitam in solitudinibus et paludinibus domus solae egerunt. Mures "
+"feroces paludis longe transfigere possunt et quidcumque movet vestigari. "
 
 #. [object]: id={ID}
 #: data/campaigns/Liberty/utils/utils.cfg:54
