--- a/po/wesnoth-low/la.po
+++ b/po/wesnoth-low/la.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-12-07 20:59+0100\n"
+"POT-Creation-Date: 2012-12-08 12:33+0100\n"
 "PO-Revision-Date: 2012-04-06 02:03+0100\n"
 "Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
 "Language-Team: Latin <http://wiki.wesnoth.org/LatinTranslation>\n"
@@ -5420,20 +5420,13 @@ msgstr "delectat Calentem"
 
 #. [leadership]: id=elates_kalenz
 #: data/campaigns/Legend_of_Wesmere/utils/abilities.cfg:13
-#, fuzzy
-#| msgid ""
-#| "elates Kalenz:\n"
-#| "Through the special bond between Kalenz and Cleodil, she elates him to "
-#| "fight better.\n"
-#| "Adjacent to Cleodil, Kalenz will do 25% more damage in battle."
 msgid ""
 "Through the special bond between Kalenz and Cleodil, she elates him to fight "
 "better.\n"
 "Adjacent to Cleodil, Kalenz will do 25% more damage in battle."
 msgstr ""
-"delectat Calentem:\n"
 "Per copulam unicam inter Calentem Cleodilamque, eum delectat ut ille melius "
-"pugnat.\n"
+"pugnet.\n"
 "Calens prope Cleodilam magis damni quarto in pugna dabit."
 
 #. [heals]: id=heals_kalenz
@@ -5448,19 +5441,12 @@ msgstr "sanat Calentem +IV"
 
 #. [heals]: id=heals_kalenz
 #: data/campaigns/Legend_of_Wesmere/utils/abilities.cfg:36
-#, fuzzy
-#| msgid ""
-#| "heals +4:\n"
-#| "If a shyde has developed a special bond to a person her healing abilities "
-#| "increase for him.  This allows Cleodil to give Kalenz extra points of "
-#| "healing at the beginning of your turn."
 msgid ""
 "If a shyde has developed a special bond to a person her healing abilities "
 "increase for him.  This allows Cleodil to give Kalenz extra points of "
 "healing at the beginning of your turn."
 msgstr ""
-"sanat +IV:\n"
-"Si hamadryas copulam unicam viri facit illi facultatem sanandi auget. Hoc "
+"Si hamadryas copulam unicam alicui facit illi facultatem sanandi auget. Hoc "
 "Cleodilam sinit ut vice incepto magis punctorum sanandi det."
 
 #. [message]: speaker=unit
