--- a/po/wesnoth-units/la.po
+++ b/po/wesnoth-units/la.po
@@ -14,14 +14,14 @@ msgstr ""
 "Project-Id-Version: Wesnoth Latin 1.2\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-12-07 20:59+0100\n"
-"PO-Revision-Date: 2012-01-15 10:10+0100\n"
+"PO-Revision-Date: 2012-12-19 20:12-0000\n"
 "Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
 "Language-Team: Latin <http://wiki.wesnoth.org/LatinTranslation>\n"
 "Language: la\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Virtaal 0.6.1\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #. [unit_type]: id=Dwarvish Dragonguard, race=dwarf
 #. [unit_type]: id=Dwarvish Masked Dragonguard, race=dwarf
@@ -70,7 +70,7 @@ msgstr "sica"
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Dragonguard.cfg:34
 #: data/core/units/dwarves/Dragonguard.cfg:47
 msgid "dragonstaff"
-msgstr "draconis scipio"
+msgstr "scipio draconis"
 
 #. [unit_type]: id=Dwarvish Fighter, race=dwarf
 #. [unit_type]: id=Dwarvish Masked Fighter, race=dwarf
@@ -237,7 +237,7 @@ msgstr ""
 #: data/core/units/dwarves/Thunderer.cfg:119
 #: data/core/units/dwarves/Thunderguard.cfg:48
 msgid "thunderstick"
-msgstr "tonitri virga"
+msgstr "virga tonitri"
 
 #. [unit_type]: id=Dwarvish Masked Thunderguard, race=dwarf
 #. [unit_type]: id=Dwarvish Thunderguard, race=dwarf
@@ -1091,7 +1091,7 @@ msgstr ""
 #. [female]
 #: data/core/units/elves/Avenger.cfg:166
 msgid "female^Elvish Avenger"
-msgstr "Ultatrix Dryadalis"
+msgstr "Ultrix Dryadalis"
 
 #. [unit_type]: id=Elvish Captain, race=elf
 #: data/core/units/elves/Captain.cfg:4
@@ -1182,7 +1182,7 @@ msgstr "lituus"
 #. [attack]: type=impact
 #: data/core/units/elves/Druid.cfg:49 data/core/units/elves/Shyde.cfg:54
 msgid "ensnare"
-msgstr "inlaqueare"
+msgstr "illaqueare"
 
 #. [attack]: type=pierce
 #: data/core/units/elves/Druid.cfg:61 data/core/units/elves/Shyde.cfg:66
@@ -3099,7 +3099,7 @@ msgstr ""
 #. [unit_type]: id=Woodsman, race=human
 #: data/core/units/humans/Woodsman.cfg:4
 msgid "Woodsman"
-msgstr "Silvicola"
+msgstr "Lignator"
 
 #. [unit_type]: id=Woodsman, race=human
 #: data/core/units/humans/Woodsman.cfg:21
@@ -3903,7 +3903,7 @@ msgstr ""
 #. [unit_type]: id=Ogre, race=ogre
 #: data/core/units/ogres/Ogre.cfg:4
 msgid "Ogre"
-msgstr "Homo Immanis"
+msgstr "Semihomo"
 
 #. [unit_type]: id=Ogre, race=ogre
 #: data/core/units/ogres/Ogre.cfg:23
@@ -3926,7 +3926,7 @@ msgstr "dolabra"
 #. [unit_type]: id=Young Ogre, race=ogre
 #: data/core/units/ogres/Young_Ogre.cfg:4
 msgid "Young Ogre"
-msgstr "Catulus Immanis"
+msgstr "Catulus Semifer"
 
 #. [unit_type]: id=Young Ogre, race=ogre
 #: data/core/units/ogres/Young_Ogre.cfg:23
@@ -4971,7 +4971,7 @@ msgstr ""
 #. [unit_type]: id=Ancient Wose, race=wose
 #: data/core/units/wose/Ancient.cfg:4
 msgid "Ancient Wose"
-msgstr "Vosis Vetus"
+msgstr "Vidanum Vetus"
 
 #. [unit_type]: id=Ancient Wose, race=wose
 #: data/core/units/wose/Ancient.cfg:18
@@ -5003,7 +5003,7 @@ msgstr "calcare"
 #. [unit_type]: id=Elder Wose, race=wose
 #: data/core/units/wose/Elder.cfg:4
 msgid "Elder Wose"
-msgstr "Grandis Vosis"
+msgstr "Grande Vidanum"
 
 #. [unit_type]: id=Elder Wose, race=wose
 #: data/core/units/wose/Elder.cfg:17
@@ -5030,10 +5030,12 @@ msgstr ""
 "Vosia non sunt omnino bellatores, sed potentia eorum capax est violentiae, "
 "si quis iram eorum excitat."
 
+# IE *widhu + anus (lord) n
+# adjective viduis,e from IE *widh-u-
 #. [unit_type]: id=Wose, race=wose
 #: data/core/units/wose/Wose.cfg:4
 msgid "Wose"
-msgstr "Vosis"
+msgstr "Vidanum"
 
 #. [unit_type]: id=Wose, race=wose
 #: data/core/units/wose/Wose.cfg:18
